CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(UNIX_DOMAIN_SOCKET_SERVER)

SET(UNIX_DOMAIN_SOCKET_SERVER_VERSION_MAJOR 1)
SET(UNIX_DOMAIN_SOCKET_SERVER_VERSION_MINOR 0)

IF(CMAKE_COMPILER_IS_GNUCXX)
    SET(CMAKE_CXX_STANDARD 11)
ENDIF()

INCLUDE_DIRECTORIES(include)

FIND_PACKAGE(Boost)
IF(NOT Boost_FOUND)
    message( FATAL_ERROR "Boost libarary Not Found!!!!")
ENDIF()

FIND_PACKAGE(Boost 1.58.0 REQUIRED COMPONENTS system thread regex)

INCLUDE_DIRECTORIES("${Boost_INCLUDE_DIRS}")
SET(Boost_USE_STATIC_LIBS OFF)
SET(Boost_USE_MULTITHREADED ON)
SET(Boost_USE_STATIC_RUNTIME OFF)

ADD_EXECUTABLE(server src/server.cpp src/UnixDomainSocketServer.cpp src/ConnectionHandler.cpp)
TARGET_LINK_LIBRARIES(server ${Boost_LIBRARIES})

ADD_EXECUTABLE(client src/client.cpp)
TARGET_LINK_LIBRARIES(client ${Boost_LIBRARIES})

ADD_EXECUTABLE(map_functions src/map_functions.cpp)
TARGET_LINK_LIBRARIES(map_functions ${Boost_LIBRARIES})
